add intial tests